# recon3d

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NOTICE  NOTICE.md  README.md  book.toml  pyproject.toml
.github/workflows/: bump.yml  ci.yml  linting.yml  linting.yml.stash  package.yml  test_coverage.yml.stash  version.yml.stash
coverage_reports/: .gitignore  coverage.xml
coverage_reports/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_bf6597b344cef50c___init___py.html  z_bf6597b344cef50c_command_line_py.html  z_bf6597b344cef50c_constants_py.html  z_bf6597b344cef50c_downscale_py.html  z_bf6597b344cef50c_grayscale_image_stack_to_segmentation_py.html  z_bf6597b344cef50c_hdf_io_py.html  z_bf6597b344cef50c_image_stack_to_array_py.html  z_bf6597b344cef50c_instance_analysis_py.html  z_bf6597b344cef50c_npy_to_mesh_py.html  z_bf6597b344cef50c_static_test_paths_py.html  z_bf6597b344cef50c_types_py.html  z_bf6597b344cef50c_utility_py.html  z_bf6597b344cef50c_voxel_to_mesh_py.html
docs/api/: index.html  recon3d.html  search.js
docs/api/recon3d/: command_line.html  constants.html  downscale.html  grayscale_image_stack_to_segmentation.html  hdf_io.html  image_stack_to_array.html  instance_analysis.html  npy_to_mesh.html  static_test_paths.html  types.html  utility.html  voxel_to_mesh.html
docs/userguide/: .gitignore  book.toml
docs/userguide/book/: 404.html  contributors.html  deployment.html  index.html  installation.html  introduction.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/userguide/book/downscale/: index.html  (+2 more)
docs/userguide/src/: SUMMARY.md  chapter_1.md  contributors.md  deployment.md  index.md  installation.md  introduction.md
src/python_template/: __init__.py  sum.py
src/recon3d/: __init__.py  command_line.py  constants.py  downscale.py  grayscale_image_stack_to_segmentation.py  hdf_io.py  image_stack_to_array.py  instance_analysis.py  npy_to_mesh.py  static_test_paths.py  types.py  utility.py  voxel_to_mesh.py
tests/: test_command_line.py  test_downscale.py  test_hdf_io.py  test_image_stack_to_array.py  test_instance_analysis.py  test_sum.py  test_types.py  test_utility.py  test_voxel_to_mesh.py
tests/data/: letter_f_3d.npy  machined_cylinder.h5
tests/data/cylinder_machined_binary/: 0000.tif  0001.tif  0002.tif  0003.tif  0004.tif  0005.tif  0006.tif  0007.tif  0008.tif  0009.tif  0010.tif  0011.tif  0012.tif  0013.tif  0014.tif  0015.tif  0016.tif  0017.tif  0018.tif  0019.tif  0020.tif
tests/data/cylinder_machined_grayscale/: 0000.tif  0001.tif  0002.tif  0003.tif  0004.tif  0005.tif  0006.tif  0007.tif  0008.tif  0009.tif  0010.tif  0011.tif  0012.tif  0013.tif  0014.tif  0015.tif  0016.tif  0017.tif  0018.tif  0019.tif  0020.tif
tests/data/cylinder_machined_semantic/: 00.tif  01.tif  02.tif  03.tif  04.tif  05.tif  06.tif  07.tif  08.tif  09.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  20.tif
tests/data/thunder_gray/: thunder_gray.tif
(+44 files in other folders)
